new port and new eureka url

--- a/mphasis-bank-accounts.properties
+++ b/mphasis-bank-accounts.properties
@@ -1,3 +1,7 @@
+server.port=8083
+eureka.client.service-url.default-zone=http://localhost:8077/
+
+
 accounts.name=shamim
 accounts.age=28
 accounts.type=saving
