--- a/mphasis-bank-accounts.properties
+++ b/mphasis-bank-accounts.properties
@@ -1,5 +1,7 @@
 server.port=8083
-eureka.client.service-url.default-zone=http://localhost:8077/
+eureka.client.serviceUrl.defaultZone=http://localhost:8077/eureka
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
 
 
 accounts.name=shamim
