--- a/proj-db-demo-dev.properties
+++ b/proj-db-demo-dev.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/workdb
 spring.datasource.username=root
-spring.datasource.password=Shamim@2023
+spring.datasource.password=Asif@2022
 
 
 bootstrap.servers=cluster.playground.cdkt.io:9092
@@ -18,7 +18,7 @@ sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule require
 sasl.mechanism=PLAIN
 
 
-group.id=bandhan-amc-java-application-group
+group.id=bandhan-amc-group
 auto.offset.reset=earliest
 
 
