--- a/proj-db-demo-dev.properties
+++ b/proj-db-demo-dev.properties
@@ -1,7 +1,7 @@
 server.port=8088
 spring.application.name=proj-db-demo-dev
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
